--- a/index.html
+++ b/index.html
@@ -34,18 +34,17 @@
 
     <!-- Form Group -->
     <div class="form-Group hidden" id="form">
-        <form action="/">
+        <!-- <form action="/"> -->
             <label for="name">Name: </label>
-            <input type="text" id="name" required>
+            <input type="text" id="name">
 
             <label for="userName">User Name: </label>
-            <input type="text" id="userName" required>
+            <input type="text" id="userName">
 
             <label for="email">Email: </label>
-            <input type="email" id="email" required><br><br>
-
-            <button id="sumbitBtn" type="submit" onclick="submitFormInfoFunction()">Submit</button>
-        </form>
+            <input type="text" id="email"><br><br>
+            <button id="sumbitBtn" onclick="submitFormInfoFunction()">Submit</button>
+        <!-- </form> -->
     </div>
 
     <!-- Display Form info -->
